--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-scroll": "^1.8.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
