--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.4.2",
+    "@cloudinary/url-gen": "^1.8.0",
     "@emailjs/browser": "^3.6.2",
     "bootstrap": "^5.2.0",
     "dotenv": "^16.0.1",
