--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.2",
+    "react-responsive": "^9.0.0-beta.10",
     "react-scroll": "^1.8.7"
   },
   "devDependencies": {
