--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.2",
     "react-responsive": "^9.0.0-beta.10",
-    "react-scroll": "^1.8.7"
+    "react-scroll": "^1.8.7",
+    "react-social-icons": "^5.14.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
